Fixed export on blacklist controller
